# cim-domain-identity

./: Cargo.toml  README.md  flake.nix  refactoring-summary.md
doc/: api.md  user-stories.md
doc/api/: identity-domain-api.md
examples/: identity_lifecycle.rs
src/: lib.rs
src/aggregate/: mod.rs
src/application/: command_handlers.rs  cqrs_adapter.rs  mod.rs  query_handlers.rs  services.rs
src/commands/: mod.rs
src/components/: identity.rs  mod.rs  projection.rs  relationship.rs  workflow.rs
src/conceptual/: concept_producer.rs  dimensions.rs  mod.rs  projections.rs
src/domain/: mod.rs  value_objects.rs
src/domain/organization/: aggregate.rs  commands.rs  events.rs  mod.rs
src/domain/person/: aggregate.rs  commands.rs  events.rs  mod.rs
src/events/: mod.rs
src/handlers/: authentication_event_handler.rs  mod.rs
src/infrastructure/: mod.rs  repositories.rs
src/ports/: inbound.rs  mod.rs  outbound.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/systems/: lifecycle.rs  markers.rs  mod.rs  projection.rs  relationship.rs  verification.rs  workflow.rs
src/value_objects/: mod.rs
tests/: aggregate_tests.rs  command_tests.rs  ecs_integration_test.rs  event_tests.rs  identity_tests.rs
