[package]
name = "cim-domain-identity"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-component = { path = "../cim-component" }
cim-domain-conceptualspaces = { path = "../cim-domain-conceptualspaces" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
