[package]
name = "cim-domain-identity"
version = "0.3.0"
edition = "2021"

[dependencies]
# CIM Dependencies
cim-domain = { path = "../cim-domain" }
cim-domain-person = { path = "../cim-domain-person" }
cim-domain-organization = { path = "../cim-domain-organization" }
cim-domain-conceptualspaces = { path = "../cim-domain-conceptualspaces" }

# Bevy ECS
bevy_ecs = { path = "../bevy-patched/crates/bevy_ecs" }
bevy_time = { path = "../bevy-patched/crates/bevy_time" }
bevy_app = { path = "../bevy-patched/crates/bevy_app" }

# Core
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Domain-specific
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"

[lints]
workspace = true
